
[tool.poetry]
name = "doc"
version = "0.1.0"
description = "nais team handbook"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
Pygments = "^2.19.1"
pymdown-extensions = "^10.14"
mkdocs-material = "^9.6.6"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.7"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
